--- a/Main/SEToolbox/SEToolbox/Views/ControlPosition.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/ControlPosition.xaml
@@ -13,17 +13,17 @@
         </Grid.ColumnDefinitions>
         <TextBox Grid.Column="0" ToolTip="X">
             <TextBox.Text>
-                <Binding Path="PositionX" Mode="TwoWay" UpdateSourceTrigger="PropertyChanged" StringFormat="0.0000000"/>
+                <Binding Path="PositionX" Mode="TwoWay" UpdateSourceTrigger="Default"/>
             </TextBox.Text>
         </TextBox>
         <TextBox Grid.Column="1" ToolTip="Y">
             <TextBox.Text>
-                <Binding Path="PositionY" Mode="TwoWay" UpdateSourceTrigger="PropertyChanged" StringFormat="N7"/>
+                <Binding Path="PositionY" Mode="TwoWay" UpdateSourceTrigger="Default"/>
             </TextBox.Text>
         </TextBox>
         <TextBox Grid.Column="2" ToolTip="Z">
             <TextBox.Text>
-                <Binding Path="PositionZ" Mode="TwoWay" UpdateSourceTrigger="PropertyChanged" StringFormat="0.0000000"/>
+                <Binding Path="PositionZ" Mode="TwoWay" UpdateSourceTrigger="Default"/>
             </TextBox.Text>
         </TextBox>
     </Grid>
