Removed Poly2Vox as it is no longer used. Added validation for Asteroid file import. Added Position editing ability. Revamped floating item detail.

--- a/Main/SEToolbox/SEToolbox/Views/ControlCubeGrid.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/ControlCubeGrid.xaml
@@ -5,6 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:converters="clr-namespace:SEToolbox.Converters"
              xmlns:props="clr-namespace:SEToolbox.Properties"
+             xmlns:views="clr-namespace:SEToolbox.Views"
              xmlns:s="clr-namespace:System;assembly=mscorlib"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="400">
@@ -18,6 +19,7 @@
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
@@ -119,7 +121,9 @@
         </ToolBarPanel>
         <Label Grid.Row="2" Grid.Column="0" Content="Dampeners:"/>
         <CheckBox Grid.Row="2" Grid.Column="1" VerticalAlignment="Center" IsChecked="{Binding Dampeners, Mode=TwoWay}" />
-        <TextBox Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" IsReadOnly="True" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Auto" BorderThickness="0" Margin="2">
+        <Label Grid.Column="0" Grid.Row="3" Content="Position:"/>
+        <views:ControlPosition Grid.Column="1" Grid.Row="3"/>
+        <TextBox Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" IsReadOnly="True" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Auto" BorderThickness="0" Margin="2">
             <TextBox.Text>
                 <MultiBinding StringFormat="{x:Static props:Resources.CubeDetail}" Mode="OneWay">
                     <Binding Path="IsPiloted"/>
@@ -137,7 +141,7 @@
                 </MultiBinding>
             </TextBox.Text>
         </TextBox>
-        <Separator Grid.Column="0" Grid.Row="4" Grid.ColumnSpan="2"/>
-        <TextBox Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="2" IsReadOnly="True" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Auto" BorderThickness="0" Margin="2" Text="{Binding Report}" />
+        <Separator Grid.Column="0" Grid.Row="5" Grid.ColumnSpan="2"/>
+        <TextBox Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="2" IsReadOnly="True" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Auto" BorderThickness="0" Margin="2" Text="{Binding Report}" />
     </Grid>
 </UserControl>
