--- a/Main/SEToolbox/SEToolbox/Views/ControlFloatingObject.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/ControlFloatingObject.xaml
@@ -3,12 +3,10 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:converters="clr-namespace:SEToolbox.Converters"
+             xmlns:views="clr-namespace:SEToolbox.Views"
+             xmlns:props="clr-namespace:SEToolbox.Properties"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <UserControl.Resources>
-        <converters:ResouceToImageConverter x:Key="ResouceToImageConverter"/>
-    </UserControl.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto"/>
@@ -18,18 +16,21 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
         <Label Grid.ColumnSpan="2">Floating Object</Label>
-        <!--<ToolBarPanel Grid.Row="1" Grid.ColumnSpan="2" HorizontalAlignment="Stretch">
-            <ToolBar>
-            </ToolBar>
-        </ToolBarPanel>-->
-        <Label Grid.Row="2" Content="Type:"/>
-        <TextBlock Grid.Column="1" Grid.Row="2" VerticalAlignment="Center" Text="{Binding SubTypeName}" />
-        <Label Grid.Row="3" Content="Distance:"/>
-        <TextBlock Grid.Row="3" Grid.Column="1" VerticalAlignment="Center" Text="{Binding PlayerDistance, StringFormat='{}{0:#,###0.0} m'}" />
+        <TextBox Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" IsReadOnly="True" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Auto" BorderThickness="0" Margin="2">
+            <TextBox.Text>
+                <MultiBinding StringFormat="{x:Static props:Resources.FloatingDetail}" Mode="OneWay">
+                    <Binding Path="DisplayName"/>
+                    <Binding Path="PlayerDistance"/>
+                    <Binding Path="Volume"/>
+                    <Binding Path="Mass"/>
+                    <Binding Path="Units"/>
+                </MultiBinding>
+            </TextBox.Text>
+        </TextBox>
+        <Label Grid.Row="2" Grid.Column="0" Content="Position:"/>
+        <views:ControlPosition Grid.Row="2" Grid.Column="1"/>
     </Grid>
 </UserControl>
