--- a/Main/SEToolbox/SEToolbox/Views/ControlCharacter.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/ControlCharacter.xaml
@@ -31,7 +31,7 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
         <Label>Character</Label>
-        <ToolBarPanel Grid.Row="1" Grid.ColumnSpan="2" HorizontalAlignment="Stretch">
+        <ToolBarPanel Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="2" HorizontalAlignment="Stretch">
             <ToolBar>
                 <Menu Style="{StaticResource ToolBarMenu}">
                     <MenuItem Header="Speed" Style="{StaticResource ToolBarTopMenuitem}">
@@ -52,15 +52,15 @@
                 </Menu>
             </ToolBar>
         </ToolBarPanel>
-        <Label Grid.Row="2" Content="Suit:"/>
+        <Label Grid.Column="0" Grid.Row="2" Content="Suit:"/>
         <ComboBox Grid.Row="2" Grid.Column="1" VerticalAlignment="Center" ItemsSource="{Binding CharacterModels}" SelectedItem="{Binding CharacterModel, Mode=TwoWay}" />
-        <Label Grid.Row="3" Content="Light:"/>
+        <Label Grid.Column="0" Grid.Row="3" Content="Light:"/>
         <CheckBox Grid.Row="3" Grid.Column="1" VerticalAlignment="Center" IsChecked="{Binding Light, Mode=TwoWay}" />
-        <Label Grid.Row="4" Content="Jet Pack:"/>
+        <Label Grid.Column="0" Grid.Row="4" Content="Jet Pack:"/>
         <CheckBox Grid.Row="4" Grid.Column="1" VerticalAlignment="Center" IsChecked="{Binding JetPack, Mode=TwoWay}" />
-        <Label Grid.Row="5" Content="Dampeners:"/>
+        <Label Grid.Column="0" Grid.Row="5" Content="Dampeners:"/>
         <CheckBox Grid.Row="5" Grid.Column="1" VerticalAlignment="Center" IsChecked="{Binding Dampeners, Mode=TwoWay}" />
-        <Label Grid.Row="6" Content="Position:"/>
+        <Label Grid.Column="0" Grid.Row="6" Content="Position:"/>
         <views:ControlPosition Grid.Column="1" Grid.Row="6" IsEnabled="{Binding IsPilot, Converter={StaticResource InverseBooleanConverter}}" />
         <!--<Label Grid.Row="7" Content="Position:"/>
         <ContentControl Grid.Row="7" Grid.Column="1" Content="{Binding Position}">
@@ -115,13 +115,13 @@
         </Grid>-->
         <!--<TextBlock Grid.Row="7" Grid.Column="1" VerticalAlignment="Center" Text="{Binding Position, Mode=OneWay}" />-->
 
-        <Label Grid.Row="7" Content="Pilot:"/>
+        <Label Grid.Column="0" Grid.Row="7" Content="Pilot:"/>
         <TextBlock Grid.Row="7" Grid.Column="1" VerticalAlignment="Center" Text="{Binding IsPilot}" />
-        <Label Grid.Row="8" Content="Player:"/>
+        <Label Grid.Column="0" Grid.Row="8" Content="Player:"/>
         <TextBlock Grid.Row="8" Grid.Column="1" VerticalAlignment="Center" Text="{Binding IsPlayer}" />
-        <Label Grid.Row="9" Content="Speed:"/>
+        <Label Grid.Column="0" Grid.Row="9" Content="Speed:"/>
         <TextBlock Grid.Row="9" Grid.Column="1" VerticalAlignment="Center" Text="{Binding Speed, StringFormat='{}{0:#,###0.000} m/s'}" />
-        <Label Grid.Row="10" Content="Distance:"/>
+        <Label Grid.Column="0" Grid.Row="10" Content="Distance:"/>
         <TextBlock Grid.Row="10" Grid.Column="1" VerticalAlignment="Center" Text="{Binding PlayerDistance, StringFormat='{}{0:#,###0.0} m'}" />
     </Grid>
 </UserControl>
