--- a/Main/SEToolbox/SEToolbox/Views/WindowLoad.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/WindowLoad.xaml
@@ -37,7 +37,7 @@
                     </GridView>
                 </ListView.View>
                 <i:Interaction.Triggers>
-                    <i:EventTrigger EventName="MouseDoubleClick">
+                    <i:EventTrigger EventName="MouseDoubleClickItem">
                         <commands:CommandAction Command="{Binding LoadCommand}"/>
                     </i:EventTrigger>
                 </i:Interaction.Triggers>
