Updated latest SE binaries. Fixed unselecting item in main window. Fixed issue in calculating ore in super large asteroids. Split out my experimental code from test code. Rewrote the display of ship component breakdown, and fixed some of the calculations which were putting out wrong values (seriously undervalued).

--- a/Main/SEToolbox/SEToolbox/Views/WindowExplorer.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/WindowExplorer.xaml
@@ -198,6 +198,7 @@
                                 <ListView.ItemContainerStyle>
                                     <Style TargetType="ListViewItem">
                                         <Setter Property="commands:SupplementaryInteraction.Behaviors" Value="{StaticResource dragBehavior}"/>
+                                        <Setter Property="HorizontalContentAlignment" Value="Stretch" />
                                     </Style>
                                 </ListView.ItemContainerStyle>
                                 <ListView.View>
@@ -206,7 +207,13 @@
                                         <GridViewColumn Header="Type" Width="70" DisplayMemberBinding="{Binding ClassType, Converter={StaticResource EnumToResouceConverter}}"/>
                                         <GridViewColumn Header="Name" Width="100" DisplayMemberBinding="{Binding DisplayName}"/>
                                         <GridViewColumn Header="Description" Width="100" DisplayMemberBinding="{Binding Description}"/>
-                                        <GridViewColumn Header="Distance" Width="70" DisplayMemberBinding="{Binding PlayerDistance, Converter={StaticResource DistanceConverter}}"/>
+                                        <GridViewColumn Header="Distance" Width="70">
+                                            <GridViewColumn.CellTemplate>
+                                                <DataTemplate>
+                                                    <TextBlock Text="{Binding PlayerDistance, Converter={StaticResource DistanceConverter}}" TextAlignment="Right"/>
+                                                </DataTemplate>
+                                            </GridViewColumn.CellTemplate>
+                                        </GridViewColumn>
                                     </GridView>
                                 </ListView.View>
                                 <ListView.InputBindings>
